# Ton2PA3

./: Pseudocode.md  README.md  Test1.py  main.py  pyproject.toml
Output/: pegel_report.txt
Pegeldaten/: pegel_report.txt
Stems/Output/: pegel_report.txt
Stems/Pegeldaten/: pegel_report.txt
